--- a/Reddit/Reddit/Cells/PostTableViewCell.xib
+++ b/Reddit/Reddit/Cells/PostTableViewCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -10,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostTableViewCell" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Reddit" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostTableViewCell" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Reddit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="268.5"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -79,7 +78,7 @@
                 <outlet property="author" destination="bwJ-S9-DgH" id="krH-L4-0wQ"/>
                 <outlet property="numberOfComments" destination="lUJ-X8-fRf" id="v2o-yA-hkB"/>
                 <outlet property="postTitle" destination="Pqm-9u-9Kr" id="cyk-vV-IvN"/>
-                <outlet property="status" destination="8zW-Zv-LvM" id="fm9-Go-GXV"/>
+                <outlet property="status" destination="8zW-Zv-LvM" id="kuL-Bv-pj0"/>
                 <outlet property="thumbnail" destination="KNJ-vd-uBd" id="nrm-4d-llG"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="102.79017857142857"/>
