--- a/Reddit/Reddit/ViewControllers/PostsViewController.xib
+++ b/Reddit/Reddit/ViewControllers/PostsViewController.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,6 +10,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostsViewController" customModule="Reddit" customModuleProvider="target">
             <connections>
                 <outlet property="postsTableView" destination="Owq-Ni-T4A" id="mNE-hC-7jL"/>
+                <outlet property="spinner" destination="xSh-oM-DV9" id="Gqz-cd-gCL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,17 +19,27 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Owq-Ni-T4A" userLabel="PostsTableView">
+                <tableView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Owq-Ni-T4A" userLabel="PostsTableView">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </tableView>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="xSh-oM-DV9">
+                    <rect key="frame" x="157" y="398" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="100" id="t1b-7H-NVQ"/>
+                        <constraint firstAttribute="height" constant="100" id="yQa-bV-5U2"/>
+                    </constraints>
+                    <color key="color" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Owq-Ni-T4A" secondAttribute="trailing" id="3za-oY-b3t"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Owq-Ni-T4A" secondAttribute="bottom" id="JWm-TZ-rUh"/>
                 <constraint firstItem="Owq-Ni-T4A" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="cKY-t2-FO4"/>
+                <constraint firstItem="xSh-oM-DV9" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="e57-NS-1XP"/>
                 <constraint firstItem="Owq-Ni-T4A" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="iTj-N6-b9B"/>
+                <constraint firstItem="xSh-oM-DV9" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="v6f-Aw-UXZ"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="139" y="103"/>
